customer-vertx-service/src/test/resources/account-deployment-istio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  labels:
    app: account-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
      - name: account-service
        image: piomin/account-vertx-service
        ports:
        - containerPort: 8095
        env:
        - name: DATABASE_NAME
          valueFrom:
            configMapKeyRef:
              name: mongodb
              key: database-name
        - name: DATABASE_USER
          valueFrom:
            secretKeyRef:
              name: mongodb
              key: database-user
        - name: DATABASE_PASSWORD
          valueFrom:
            secretKeyRef:
              name: mongodb
              key: database-password
---
apiVersion: v1
kind: Service
metadata:
  name: account-service
  labels:
    app: account-service
spec:
  ports:
  - port: 8095
    protocol: TCP
  selector:
    app: account-service
---
apiVersion: v1
kind: Route
metadata:
  name: account-route
spec:
  path: "/account"
  to:
    kind: Service
    name: account-service
