customer-vertx-service/src/test/resources/customer-deployment-openshift.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service
  labels:
    app: customer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-service
  template:
    metadata:
      labels:
        app: customer-service
    spec:
      containers:
      - name: customer-service
        image: piomin/customer-vertx-service
        ports:
        - containerPort: 8090
        env:
        - name: DATABASE_NAME
          valueFrom:
            secretKeyRef:
              name: mongodb
              key: database-name
        - name: DATABASE_USER
          valueFrom:
            secretKeyRef:
              name: mongodb
              key: database-user
        - name: DATABASE_PASSWORD
          valueFrom:
            secretKeyRef:
              name: mongodb
              key: database-password
---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  labels:
    app: customer-service
spec:
  ports:
  - port: 8090
    protocol: TCP
  selector:
    app: customer-service
---
apiVersion: v1
kind: Route
metadata:
  name: customer-route
spec:
  path: "/customer"
  to:
    kind: Service
    name: customer-service
