customer-vertx-service/src/test/resources/customer-to-account-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: account-service
spec:
  hosts:
    - account-service
  http:
  - match:
    - uri:
        prefix: /account
    fault:
      delay:
        fixedDelay: 3s
        percent: 100
    route:
    - destination:
        host: account-service
